--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,5 +3,19 @@
 @tailwind utilities;
 
 .layout {
-    @apply flex;
+    @apply fixed w-full h-full grid items-start;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: auto 1fr;
+}
+
+.header {
+    @apply row-start-1 max-h-16 border-b border-gray-700 dark:bg-gray-800 p-2 px-3;
+}
+
+.sidebar {
+    @apply row-start-2 h-full px-3 py-4 overflow-y-auto bg-gray-100 dark:bg-gray-800 w-64;
+}
+
+.main {
+    @apply row-start-1 row-span-2 h-full w-full overflow-auto p-4 bg-gray-50 dark:bg-gray-900;
 }
