--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    * {
+        scrollbar-width: 100px;
+        scrollbar-color: theme('colors.gray.600') theme('colors.gray.900');
+    }
+    
+    *::-webkit-scrollbar {
+        width: 15px;
+    }
+    
+    *::-webkit-scrollbar-track {
+        background: theme('colors.gray.900');
+        border-radius: 5px;
+    }
+    
+    *::-webkit-scrollbar-thumb {
+        background-color: theme('colors.gray.600');
+        border-radius: 14px;
+        border: 3px solid theme('colors.gray.900');
+    }
+}
+
 .layout {
     @apply fixed w-full h-full grid items-start;
     grid-template-rows: auto 1fr;
@@ -13,9 +35,52 @@
 }
 
 .sidebar {
-    @apply row-start-2 h-full px-3 py-4 overflow-y-auto bg-gray-100 dark:bg-gray-800 w-64;
+    @apply flex flex-col gap-2 row-start-2 h-full py-4 overflow-y-auto bg-gray-100 dark:bg-gray-800 w-72;
 }
 
 .main {
-    @apply row-start-1 row-span-2 h-full w-full overflow-auto p-4 bg-gray-50 dark:bg-gray-900;
+    @apply row-start-1 row-span-2 h-full w-full overflow-auto bg-gray-50 dark:bg-gray-800;
+}
+
+.btn {
+    @apply p-4 dark:active:bg-gray-700 rounded;
+}
+
+.btn-outline {
+    @apply border text-white border-white;
+}
+
+.btn-outline-dash {
+    @apply border text-white border-white border-dashed;
+}
+
+.ql-toolbar {
+  border-top-left-radius: theme('borderRadius.md');
+  border-top-right-radius: theme('borderRadius.md');
+}
+
+#editor {
+  border-bottom-left-radius: theme('borderRadius.md');
+  border-bottom-right-radius: theme('borderRadius.md');
+  color: theme('colors.white');
+  height: 80%;
+  /* added these styles */
+  flex: 1;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.ql-stroke,
+.ql-picker-label {
+  color: theme('colors.white') !important;
+  stroke: theme('colors.white') !important;
+}
+
+.ql-fill {
+  fill: theme('colors.white') !important;
+}
+
+.ql-picker-options {
+  background: theme('colors.gray.900') !important;
+  color: theme('colors.white') !important;
 }
